--- a/package.json
+++ b/package.json
@@ -4,13 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/devcronberg/numbers.git"
-  },
-  "author": "",
+  "author": "Michell Cronberg",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/devcronberg/numbers/issues"
